--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,5 @@
 file.reference.ProyectoGrandePhaser-public_html=public_html
 file.reference.ProyectoGrandePhaser-test=test
+file.reference.ProyectoGrandePhaserDesarrollo-public_html=public_html
 files.encoding=UTF-8
-site.root.folder=${file.reference.ProyectoGrandePhaser-public_html}
-test.folder=${file.reference.ProyectoGrandePhaser-test}
+site.root.folder=${file.reference.ProyectoGrandePhaserDesarrollo-public_html}
